mdapipkg/objects/Account_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Achievements</relationshipLabel>
        <relationshipName>Account_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Achievement_Category__c</fullName>
        <formula>TEXT(Achievement__r.Achievement_Category__c)</formula>
        <label>Achievement Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement_Name__c</fullName>
        <formula>Achievement__r.Name__c</formula>
        <label>Achievement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement__c</fullName>
        <label>Achievement</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Achievement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Award</value>
            </filterItems>
            <filterItems>
                <field>Achievement__c.Achievement_Type__c</field>
                <operation>equals</operation>
                <value>Account</value>
            </filterItems>
            <filterItems>
                <field>Achievement__c.Achievement_Type__c</field>
                <operation>equals</operation>
                <value>Both</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Achievement__c</referenceTo>
        <relationshipLabel>Account Achievements</relationshipLabel>
        <relationshipName>Account_Achievements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <formula>TEXT(Achievement__r.Type__c )</formula>
        <label>Award Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nominated</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Achievement__r.Description__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPOI_Organizational_Code__c</fullName>
        <label>YPOI Organizational Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YPO_Award_Year__c</fullName>
        <label>YPO Award Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2012-2013</fullName>
                </value>
                <value>
                    <fullName>2011-2012</fullName>
                </value>
                <value>
                    <fullName>2010-2011</fullName>
                </value>
                <value>
                    <fullName>2009-2010</fullName>
                </value>
                <value>
                    <fullName>2008-2009</fullName>
                </value>
                <value>
                    <fullName>2007-2008</fullName>
                </value>
                <value>
                    <fullName>2006-2007</fullName>
                </value>
                <value>
                    <fullName>2005-2006</fullName>
                </value>
                <value>
                    <fullName>2004-2005</fullName>
                </value>
                <value>
                    <fullName>2003-2004</fullName>
                </value>
                <value>
                    <fullName>2002-2003</fullName>
                </value>
                <value>
                    <fullName>2001-2002</fullName>
                </value>
                <value>
                    <fullName>2000-2001</fullName>
                </value>
                <value>
                    <fullName>1999-2000</fullName>
                </value>
                <value>
                    <fullName>1998-1999</fullName>
                </value>
                <value>
                    <fullName>1997-1998</fullName>
                </value>
                <value>
                    <fullName>1996-1997</fullName>
                </value>
                <value>
                    <fullName>1995-1996</fullName>
                </value>
                <value>
                    <fullName>1994-1995</fullName>
                </value>
                <value>
                    <fullName>1993-1994</fullName>
                </value>
                <value>
                    <fullName>1992-1993</fullName>
                </value>
                <value>
                    <fullName>1991-1992</fullName>
                </value>
                <value>
                    <fullName>1990-1991</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Achievement</label>
    <listViews>
        <fullName>Account_Awards</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>YPO_Award_Year__c</columns>
        <columns>Candidate_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Achievements</label>
    </listViews>
    <nameField>
        <displayFormat>AAT-{0000}</displayFormat>
        <label>Account Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Achievement_Type_Must_Be_Account_Or_Both</fullName>
        <active>true</active>
        <description>Achievement_Type_Must_Be_Account_Or_Both: This rule will prevent users from creating or updating an account achievement record when the related achievement type does not match.</description>
        <errorConditionFormula>OR(
   ISPICKVAL(Achievement__r.Achievement_Type__c, &quot;Contact&quot;),
   ISPICKVAL(Achievement__r.Achievement_Type__c, &quot;&quot;)
   )</errorConditionFormula>
        <errorMessage>The related achievement record has a mismatching &quot;Achievement Type&quot;.  Please navigate to the achievement record to update accordingly.</errorMessage>
    </validationRules>
</CustomObject>